--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -21,6 +21,7 @@
         top: 0;
         left: 0;
         transform: translateX(-100%);
+        height: -webkit-fill-available;
     }
 
     .sidebar.open {
